--- a/action.yml
+++ b/action.yml
@@ -1,17 +1,9 @@
-name: 'Check PHP syntax errors'
-description: 'Find php syntax errors.'
-inputs:
-  path:
-    description: 'path to check'
-    required: false
-    default: '.'
-  options:
-    description: 'command options.(eg: --no-cache --exclude=*.log)'
-    required: false
-    default: ''
+name: 'PHP Lint'
+description: 'Run Lint Against Pull Request'
+author: 'Michael Wright <php-lint@wserver.co.uk>'
 runs:
   using: 'docker'
   image: 'Dockerfile'
 branding:
-  icon: 'check'
-  color: 'purple'
+  icon: 'eye'  
+  color: 'gray-dark'
